# tree-sitter-realpaver

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  highlights.scm  meson.build  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/: meson.build
bindings/c/: meson.build  tree-sitter-realpaver.pc.in
bindings/c/tree_sitter/: meson.build
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_realpaver/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterRealPaver/: realpaver.h
bindings/swift/TreeSitterRealPaverTests/: TreeSitterRealPaverTests.swift
queries/: highlights.scm  locals.scm
queries/test/corpus/: definitions.txt
src/: grammar.json  meson.build  node-types.json  parser.c
test/corpus/: definitions.txt
